<resources>
    <string name="app_name">Casps</string>
    <string name="app_name_big">CASPS</string>
    <string name="apps_name">CSPS公共服务平台</string>
    <string name="action_settings">Settings</string>
    <string name="settings_notice">通知提醒</string>
    <string name="clean_cache">清除缓存</string>
    <string name="new_version">最新版本下载</string>
    <string name="about_version">关于版本</string>
    <string name="about_us">关于我们</string>
    <string name="cleanfast">一键清理</string>
    <string name="cleanask">是否清理缓存</string>
    <string name="resname">资源名称</string>
    <string name="ple_resname">请输入资源名称</string>
    <string name="cleancomplete">清理完成</string>
    <string name="settings">设置</string>
    <string name="inputusername">请输入用户名</string>
    <string name="inputpassword">请输入密码</string>
    <string name="inputcheckcode">请输入验证码</string>
    <string name="editext_input_type">0123456789zxcvbnmasdfghjklqwertyuiopZXCVBNMASDFGHJKLQWERTYUIOP</string>
    <string name="login">登录</string>
    <string name="pleaselogin">请登录</string>
    <string name="hint_tv_request_stop_titleedit">编辑</string>
    <string name="delete">删除</string>
    <string name="editgood">编辑商品</string>
    <string name="Sign_out">退出</string>
    <string name="save">保存</string>
    <string name="True">确定</string>
    <string name="add">添加</string>
    <string name="dodesc">操作说明</string>
    <string name="cancel">取消</string>
    <string name="gooddetail">商品详情</string>
    <string name="detail">详情</string>
    <string name="goodmanage">商品管理</string>
    <string name="selectclass">选择分类</string>
    <string name="titlepic">标题图片</string>
    <string name="select">选择</string>
    <string name="name">名称</string>
    <string name="screen">筛选</string>
    <string name="user_PleaseOpenPermission">请开启相关的用户权限</string>
    <string name="names">名称:</string>
    <string name="Class">种类:</string>
    <string name="pro_time">生产日期</string>
    <string name="pro_times">生产日期:</string>
    <string name="pro_addr">生产地址</string>
    <string name="pro_addrS">生产地址:</string>
    <string name="stop_use">已停用</string>
    <string name="pro_pre">生产产家</string>
    <string name="pro_num">生产编号</string>
    <string name="pro_brand">品牌</string>
    <string name="pro_stock">库存</string>
    <string name="pro_pres">生产产家:</string>
    <string name="pro_nums">生产编号:</string>
    <string name="pro_brands">品牌:</string>
    <string name="pro_stocks">库存:</string>
    <string name="pro_price">价格</string>
    <string name="pro_prices">价格:</string>
    <string name="prices_search">报价检索</string>
    <string name="pro_desc">描述</string>
    <string name="pro_descs">备注</string>
    <string name="search">查询</string>
    <string name="pro_shelf_life">保质期</string>
    <string name="pro_shelf_lifes">保质期:</string>
    <string name="pro_Specificationss">规格:</string>
    <string name="addcart">加入购物车</string>
    <string name="pro_Specifications">规格</string>
    <string name="ple_input_goodsname">请输入商品名称</string>
    <string name="ple_input_time">请输入生产日期</string>
    <string name="banner_pic">轮播图片</string>
    <string name="select_title_pic">选择标题图片</string>
    <string name="select_banner_pic">选择轮播图片</string>
    <string name="temporary_pic">临时素材库</string>
    <string name="platform_pic">平台素材库</string>
    <string name="my_pic">我的素材库</string>
    <string name="Classs">分类</string>
    <string name="select_class">选择分类</string>
    <string name="pic_manege">图片库管理</string>
    <string name="doit">启用</string>
    <string name="stopit">停用</string>
    <string name="buy">采购</string>
    <string name="sale">销售</string>
    <string name="startuse">开始使用</string>
    <string name="loginout_msg">确认要退出账号吗？</string>
    <string name="isnew_version">当前最新版本</string>
    <string name="have_new_version">有新版本</string>
    <string name="userExit">退出</string>
    <string name="about_us_tv01">CASPS 公共服务电子商务平台是农校对接项目专属电子商务平台。平台囊括 B2B、B2C 、B2M 、 B2T、 B2G 、 C2C 、 C2G 、 ERP等多种新型商业模式。通过对接校企双方，提供良好优质的交易渠道，为企业间搭建资源联盟，解决整个产业链资源交换的数据整合问题。</string>
    <string name="about_us_tv02">中联联合投资控股集团有限公司</string>
    <string name="about_us_tv03">联系电话:010-62513620</string>
    <string name="about_us_tv04">企业邮箱:zhouyi@nxdjfuw.org.cn</string>
    <string name="testStr">JOKER</string>
    <string name="UserBack1">返回系统</string>
    <string name="cart1">采购拣单车</string>
    <string name="bank_add_card_btn">+新增账户</string>
    <string name="item_account_name">账户全称：</string>
    <string name="item_account_number">账户号码：</string>
    <string name="item_bank_name">银行名称：</string>
    <string name="item_contacts_name">联系人：</string>
    <string name="item_mobile_number">手机号：</string>
    <string name="item_telephone_number">电话号码：</string>
    <string name="item_account_name2">账户全称</string>
    <string name="item_account_number2">账户号码</string>
    <string name="item_bank_name2">银行名称</string>
    <string name="item_bank_name3">账户名称</string>
    <string name="item_contacts_name2">联系人</string>
    <string name="item_mobile_number2">手机号</string>
    <string name="item_telephone_number2">电话号码</string>
    <string name="edhint_account_name">请输入账户全称</string>
    <string name="edhint_account_number">请输入账户号码</string>
    <string name="edhint_bank_name">请输入账户名称</string>
    <string name="edhint_bank_name1">请输银行名称</string>
    <string name="edhint_contacts_name">请输入联系人</string>
    <string name="edhint_mobile_number">请输入手机号</string>
    <string name="edhint_telephone_number">请输入电话号码</string>
    <string name="activity_title_bank_bills_tv">银行账户管理</string>
    <string name="activity_title_card_edit_tv">账户编辑</string>
    <string name="activity_title_card_add_tv">新增账户</string>
    <string name="dialog_card_delete_msg">确认要删除吗？</string>
    <string name="title_activity_card__search">查询</string>
    <string name="dialog_card_delete_succeed">删除银行账户成功</string>
    <string name="tv_bills_id_title">订单号：</string>
    <string name="tv_bills_type_title">类型：</string>
    <string name="tv_bills_flow_id_title">流程：</string>
    <string name="tv_bills_buy_name_title">买方：</string>
    <string name="tv_bills_contract_time_title">签约时间：</string>
    <string name="tv_bills_contract_time_title_text">签约时间</string>
    <string name="tv_bills_payment_time_title">付款时间：</string>
    <string name="tv_bills_start_delivery_time_title">送货开始时间：</string>
    <string name="tv_bills_end_delivery_time_title">送货结束时间：</string>
    <string name="tv_bank_name_title">付款方：</string>
    <string name="tv_sum_money_title">总金额：</string>
    <string name="tv_payment_card_id_title">支付账号：</string>
    <string name="tv_gathering_card_title">收款账号：</string>
    <string name="tv_payment_address_title">收货地址：</string>
    <string name="tv_ment_address_title">发货地址：</string>
    <string name="tv_already_money_title">已付金额：</string>
    <string name="tv_now_money_title">付款金额：</string>
    <string name="tv_payment_id_title">本次付款账号：</string>
    <string name="ed_hint_title">备注</string>
    <string name="ed_edit_title">关闭</string>
    <string name="tv_commodity_name_title">商品：</string>
    <string name="tv_commodity_money_title">金额：</string>
    <string name="tv_commodity_one_money_title">单价(元)：</string>
    <string name="tv_commodity_one_money_title_text">单价(元)</string>
    <string name="tv_commodity_count_title">数量：</string>
    <string name="tv_await_count_title">待发货数量：</string>
    <string name="tv_reality_count_title">实际收货数量：</string>
    <string name="tv_await_money_title">待付金额：</string>
    <string name="tv_reality_money_title">实际收金额：</string>
    <string name="tv_search_payment_id">订单号</string>
    <string name="tv_search_payment_goods_name">商品名</string>
    <string name="tv_search_payment_buy_name">付款方</string>
    <string name="tv_search_payment_buy_name2">收款方</string>
    <string name="tv_search_payment_buy_name3">请输入首款方</string>
    <string name="ed_search_hint_id">请输入订单号</string>
    <string name="ed_search_hint_goods_name">请输入商品名</string>
    <string name="ed_search_hint_buy_name">请输入付款方</string>
    <string name="pay_people">付款方:</string>
    <string name="pay_already_money">已付金额:</string>
    <string name="pay_await_money">待付金额:</string>
    <string name="pay_now_money">付款金额:</string>
    <string name="pay_ment_id">本次付款账号:</string>
    <string name="refund_ment_id">本次退款账号:</string>
    <string name="pay_sum_money">总金额:</string>
    <string name="ck_payment_all_title">全选</string>
    <string name="bt_offline_payment_title">线下付款</string>
    <string name="activity_panment_title">付款</string>
    <string name="dialog_pay_msg">确认要付款吗？</string>
    <string name="dialog_receipe_msg">确认要收款吗？</string>
    <string name="dialog_refund_msg">确认要退款吗？</string>
    <string name="dialog_reset_msg">重置将清除所有编辑数据</string>
    <string name="dialog_receipe_bills_count_title">订单数：</string>
    <string name="dialog_receipe_bills_money_title">总金额：</string>
    <string name="activity_bills_details_title">订单详情</string>
    <string name="head_payee_title">收款方：</string>
    <string name="head_payment_money_title">付款金额：</string>
    <string name="head_payment_time_title">付款时间：</string>
    <string name="head_remark_hint_title">备注：</string>
    <string name="head_harvest_money_title">收款</string>
    <string name="head_retreat_money_title">退款</string>
    <string name="head_retreat_money_verify_title">退款确认</string>
    <string name="head_operation_explain_title">操作说明</string>
    <string name="head_refund_payment_buy_name">付款方：</string>
    <string name="head_refund_money_title">可退金额：</string>
    <string name="head_operator_add_title">添加</string>
    <string name="activity_receiv_refund_money_title">收退款</string>
    <string name="head_receive_refund_title">退款方：</string>
    <string name="head_receive_refund_money_title">退款金额：</string>
    <string name="dialog_refund_money_msg">确认要收退款吗？</string>
    <string name="tv_receive_refund_title">退款方</string>
    <string name="hint_receive_refund_title">请输入退款方</string>
    <string name="hint_reset_title">重置</string>
    <string name="activity_operator_title">业务操作员管理</string>
    <string name="activity_add_operator_title">添加操作员</string>
    <string name="activity_edit_operator_title">修改操作员</string>
    <string name="hint_layout_right_btn_title">设置密码</string>
    <string name="hint_tv_name_title">名称：</string>
    <string name="hint_tv_account_name_title">账号：</string>
    <string name="hint_tv_password_title">密码</string>
    <string name="hint_tv_affirm_pword_title">确认密码</string>
    <string name="hint_ed_password_title">用户密码</string>
    <string name="hint_ed_affirm_pword_title">确认用户密码</string>
    <string name="hint_ed_affirm_title">确认</string>
    <string name="hint_tv_caount_title">账户</string>
    <string name="hint_ed_caoun_title">用户账户</string>
    <string name="hint_tv_opr_name_title">名称</string>
    <string name="hint_ed_opr_name_title">用户名称</string>
    <string name="hint_tv_amobile_title">电话</string>
    <string name="hint_ed_amobile_title">用户号码</string>
    <string name="hint_tv_email_title">邮箱</string>
    <string name="hint_block_up_title">停用</string>
    <string name="hint_about_role_title">关联角色</string>
    <string name="hint_tv_express_activity_title">收发货地址</string>
    <string name="hint_tv_express_address_title">地址：</string>
    <string name="hint_ed_express_address_title">请输入地址位置</string>
    <string name="hint_tv_express_area_title">所属区域：</string>
    <string name="hint_ed_express_area_title"></string>
    <string name="hint_tv_express_postcode_title">邮编：</string>
    <string name="hint_ed_express_postcode_title">请输入邮编</string>
    <string name="hint_tv_express_contacts_title">联系人：</string>
    <string name="hint_ed_express_contacts_title">请输入联系人</string>
    <string name="hint_tv_express_mobile_title">手机号：</string>
    <string name="hint_ed_express_mobile_title">请输入手机号</string>
    <string name="hint_tv_express_phone_title">电话号码：</string>
    <string name="hint_ed_express_phone_title">请输入电话号码</string>
    <string name="pic_catalog_name">图片目录名称</string>
    <string name="pic_catalog_name_hint">请填写图片目录名称</string>
</resources>