<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout style="@style/LinearLayout_style">

        <TextView
            style="@style/text_style"
            android:layout_weight="1"
            android:text="@string/pic_catalog_name" />

        <EditText
            android:id="@+id/fragment_mypic_empty_class_Et"
            style="@style/text_style"
            android:layout_weight="2"
            android:hint="@string/pic_catalog_name_hint" />
    </LinearLayout>

    <Button
        android:id="@+id/fragment_mypic_empty_class_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/size_10"
        android:layout_marginRight="@dimen/size_10"
        android:layout_marginTop="@dimen/size_15"
        android:background="@drawable/btn_style"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_16" />

</LinearLayout>
