<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_35"
            android:layout_margin="@dimen/size_5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ed_account_name_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/size_15"
                android:text="@string/item_account_name2"
                android:textColor="@color/tv_delete_color" />

            <EditText
                android:id="@+id/ed_account_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/edhint_account_name" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_35"
            android:layout_margin="@dimen/size_5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ed_account_number_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/size_15"
                android:text="@string/item_account_number2"
                android:textColor="@color/tv_delete_color" />

            <EditText
                android:id="@+id/ed_account_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:inputType="number"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_35"
            android:layout_margin="@dimen/size_5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ed_bank_name_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/size_15"
                android:text="@string/item_bank_name2"
                android:textColor="@color/tv_delete_color" />

            <EditText
                android:id="@+id/ed_bank_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/edhint_bank_name" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_35"
            android:layout_margin="@dimen/size_5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ed_contacts_name_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/size_15"
                android:text="@string/item_contacts_name2"
                android:textColor="@color/tv_delete_color" />

            <EditText
                android:id="@+id/ed_contacts_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/edhint_contacts_name" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_35"
            android:layout_margin="@dimen/size_5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ed_mobile_number_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/size_15"
                android:text="@string/item_mobile_number2"
                android:textColor="@color/tv_delete_color" />

            <EditText
                android:id="@+id/ed_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/edhint_mobile_number"
                android:maxLength="11"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_35"
            android:layout_margin="@dimen/size_5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ed_telephone_number_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/size_15"
                android:text="@string/item_telephone_number2"
                android:textColor="@color/tv_delete_color" />

            <EditText
                android:id="@+id/ed_telephone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/edhint_telephone_number"
                android:inputType="number"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_bg" />
    </LinearLayout>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/add_card_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginBottom="@dimen/size_10"
        android:layout_marginLeft="@dimen/main_margin"
        android:layout_marginRight="@dimen/main_margin"
        android:layout_marginTop="@dimen/size_20"
        android:paddingLeft="@dimen/size_20"
        android:paddingRight="@dimen/size_20"
        app:fb_borderColor="@color/title_bg"
        app:fb_borderWidth="1dp"
        app:fb_defaultColor="@color/title_bg"
        app:fb_focusColor="@color/title_bg"
        app:fb_radius="@dimen/size_5"
        app:fb_text="@string/save"
        app:fb_textColor="@color/white"
        app:fb_textSize="@dimen/btn_size" />
</LinearLayout>
