<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_15"
                android:layout_weight="3"
                android:text="@string/hint_tv_password_title"
                android:textColor="@color/bills_tv_color"
                android:textSize="@dimen/font_size_16" />

            <EditText
                android:id="@+id/operator_ed_pword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:digits="@string/editext_input_type"
                android:hint="@string/hint_tv_affirm_pword_title"
                android:textSize="@dimen/font_size_16" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1"
            android:background="@color/view_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_15"
                android:layout_weight="3"
                android:text="@string/hint_tv_affirm_pword_title"
                android:textColor="@color/bills_tv_color"
                android:textSize="@dimen/font_size_16" />

            <EditText
                android:id="@+id/operator_ed_affirmpword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:digits="@string/editext_input_type"
                android:hint="@string/hint_ed_affirm_pword_title"
                android:textSize="@dimen/font_size_16" />
        </LinearLayout>

    </LinearLayout>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/affirm_pword_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_below="@+id/layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/size_10"
        android:layout_marginLeft="@dimen/main_margin"
        android:layout_marginRight="@dimen/main_margin"
        android:layout_marginTop="@dimen/size_20"
        android:paddingLeft="@dimen/size_20"
        android:paddingRight="@dimen/size_20"
        app:fb_borderColor="@color/title_bg"
        app:fb_borderWidth="1dp"
        app:fb_defaultColor="@color/title_bg"
        app:fb_focusColor="@color/title_bg"
        app:fb_radius="@dimen/size_5"
        app:fb_text="@string/hint_ed_affirm_title"
        app:fb_textColor="@color/white"
        app:fb_textSize="@dimen/btn_size" />
</LinearLayout>
